--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,8 @@
+.container .flexSB{
+  margin-bottom: 1rem;
+
+}
+
 header {
   height: 10vh;
   line-height: 10vh;
@@ -32,6 +37,7 @@ header button {
 .toggle {
   display: none;
 }
+
 @media only screen and (max-width: 768px) {
   header nav .flexSB {
     display: none;
